force-app/src/objects/c2g__AllocScheduleRunTransaction__c.object
<CustomObject>
    <fields>
        <fullName>c2g__AllocScheduleRun__c</fullName>
        <label>Allocation Schedule Run</label>
        <referenceTo>c2g__AllocScheduleRun__c</referenceTo>
        <relationshipLabel>Allocation Schedule Run Results</relationshipLabel>
        <relationshipName>AllocScheduleRuns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Allocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Allocation</label>
        <referenceTo>c2g__Allocation__c</referenceTo>
        <relationshipLabel>Allocation Schedule Run Allocations</relationshipLabel>
        <relationshipName>AllocScheduleRunAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Journal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Allocation Schedule Run Journals</relationshipLabel>
        <relationshipName>AllocScheduleRunJournals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Allocation Schedule Run Results</relationshipLabel>
        <relationshipName>AllocScheduleRunTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation Schedule Run Result</label>
    <nameField>
        <displayFormat>ASRT-{00000}</displayFormat>
        <label>Allocation Schedule Run Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedule Run Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>